improvement - Refactor Settings module to follow hexagonal architecture - java 0s - angular 0s
Co-authored-by: arnaudroubinet <4160229+arnaudroubinet@users.noreply.github.com>